Bug 95618 - missing borders in some autocorrect replacement table elements (Win8.1 only; OpenGL related)
Summary: missing borders in some autocorrect replacement table elements (Win8.1 only; ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha1
Hardware: Other Windows (All)
: medium minor
Assignee: Michael Meeks
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-11-05 21:02 UTC by tommy27
Modified: 2016-10-25 19:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (205.53 KB, image/png)
2015-11-05 21:03 UTC, tommy27
Details
newer screenshot (15.56 KB, image/png)
2016-02-14 13:37 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2015-11-05 21:02:45 UTC
tested under Win8.1 x64 using 5.1.0.0.alpha1+
Build ID: c81142b277546714c0dfa8f9c2961c8ef80bc6d2-GL
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-04_23:17:48
Locale: it-IT (it_IT)

STEPS TO REPRODUCE
1- load the autocorrect replacement table (Tools/Autocorrect/Autocorrect options/Replace

2- compare the margins of the "replace tab" and of the "replace" and "with" fields in LibO 5.1.0.0 alpha and 5.0.3.1

you will see that some margins are missing in 5.1.x (see attached screenshot)

is is a nasty side effect of the fix for Bug 95352 ?
Comment 1 tommy27 2015-11-05 21:03:10 UTC
Created attachment 120310 [details]
screenshot
Comment 2 Buovjaga 2015-11-06 08:47:44 UTC
Not reproduced on Win 7, but the window decorations are different in Win 8..
No repro for bug 95616 either.
Have to test on 8 when I can.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: db6a928a420868b2a80ba11c8d46151d16c13624
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-05_22:13:24
Locale: fi-FI (fi_FI)
Comment 3 tommy27 2015-11-06 10:20:02 UTC
retested under Win7 x64 using LibO 5.1.0.0.alpha1+
Build ID: db6a928a420868b2a80ba11c8d46151d16c13624-GL
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-05_22:13:24
Locale: it-IT (it_IT)

I don't reproduce the bug on that Win7 machine.
I'll retest later on the Win8.1 machine to tell if the issue is O/S specific or was a transient bug from previous daily build
Comment 4 Buovjaga 2015-11-06 14:45:05 UTC
I still see the borders of the Replace tab, so no problem here.

Win 8.1 32-bit
LibO Version: 5.1.0.0.alpha1+
Build ID: db6a928a420868b2a80ba11c8d46151d16c13624-GL
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-05_22:13:24
Locale: fi-FI (fi_FI)
Comment 5 tommy27 2015-11-22 11:14:13 UTC
bug persists under Win8.1 x64 using LibO 5.1.0.0.alpha1+
Build ID: 0acf23044bdf003bee2df1e8a3066ed157343401-GL
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-21_23:39:40
Locale: it-IT (it_IT)
Comment 6 Adolfo Jayme Barrientos 2016-01-06 11:30:37 UTC
Is this OpenGL-related? I see in attachment 120310 [details] that the dialog with the missing border is rendered with OpenGL, and that the one rendering correctly does not use OpenGL.
Comment 7 tommy27 2016-01-06 18:06:19 UTC
good catch. I confirm the issue is related to OpenGL status ON.
retested with Version: 5.2.0.0.alpha0+
Build ID: 451f359023c681a91dbb232a5ea3fffb12c964bc
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-27_07:49:03
Locale: it-IT (it_IT)
Comment 8 tommy27 2016-01-14 06:38:34 UTC
@Adolfo
can you please confirm or not this issue on you PC?

for me still present with OpenGL "on" using LibO 5.2.0.0.alpha0+
Build ID: 70ea14baf7d43c00f73807bce13629ca25320558
CPU Threads: 4; OS Version: Windows 6.29; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-13_23:55:07
Locale: it-IT (it_IT)
Comment 9 Buovjaga 2016-01-15 15:28:39 UTC
Now I could repro the tab border problem!! Field border is fine.

Win 8.1 32-bit
Version: 5.2.0.0.alpha0+
Build ID: f0841c6c86c8c8403eb1d78a1bd43a8adac75e3a
CPU Threads: 4; OS Version: Windows 6.29; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-15_00:01:41
Locale: fi-FI (fi_FI)
Comment 10 tommy27 2016-01-15 15:35:50 UTC
thanks 4 reproducing...
which metabug should we add this one?

Bug 93529 - Meta: VCL/OpenGL tracker bug for 5.0+
or 
Bug 94691 - [META] OpenGL bugs
Comment 11 Buovjaga 2016-01-15 16:18:26 UTC
(In reply to tommy27 from comment #10)
> thanks 4 reproducing...
> which metabug should we add this one?
> 
> Bug 93529 - Meta: VCL/OpenGL tracker bug for 5.0+

I have a feeling it should be in the above.
Comment 12 tommy27 2016-02-14 08:24:59 UTC
RESOLVED WORKSFORME under Win8.1 x64
using 5.2.0.0.alpha0+
Build ID: f01bac5cc2b54b6df731b45c46187fec12515b46
CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-02-14_00:02:05
Locale: it-IT (it_IT)
Comment 13 Buovjaga 2016-02-14 12:08:41 UTC
(In reply to tommy27 from comment #12)
> RESOLVED WORKSFORME under Win8.1 x64
> using 5.2.0.0.alpha0+
> Build ID: f01bac5cc2b54b6df731b45c46187fec12515b46
> CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
> TinderBox: Win-x86@42, Branch:master, Time: 2016-02-14_00:02:05
> Locale: it-IT (it_IT)

I noticed your UI Render is default instead of OpenGL. Is it OK with OGL as well?
Comment 14 tommy27 2016-02-14 13:37:14 UTC
Created attachment 122639 [details]
newer screenshot

you are right...
with current 5.2.0.0 alpha even if I has OpenGL flagged it wasn't applied...
I had to flag the "force OpenGL" option too to see it really enabled

after doing this I can see the tab border still missing while the field borders are now correct.

so I'm updating the screenshot.

half of the bug is fixed, half is not.
Comment 15 Buovjaga 2016-02-14 14:39:20 UTC
tommy: could you paste here the contents of:
C:\Users\User\AppData\Roaming\LibreOffice\4\cache\opengl_device.log
Comment 16 tommy27 2016-02-14 15:14:51 UTC
here it is:

DriverVersion: 14.301.1001.0
DriverDate: 9-15-2014
DeviceID: PCI\VEN_1002&DEV_9851&SUBSYS_22CE103C&REV_05
AdapterVendorID: 0x1002
AdapterDeviceID: 0x9851
AdapterSubsysID: 0x22ce103c
DeviceKey: System\CurrentControlSet\Control\Video\{32E530AC-2911-41DF-A83D-362ED1A3011D}\0000
DeviceString: AMD Radeon(TM) R5 Graphics
Comment 17 Michael Meeks 2016-02-16 11:44:18 UTC
Looks like the last bit of this bug is in the salnativewidgets-luna.cxx where having asked carefully for a certain size of region; the tab piece goes and enlarges this somewhat gratuitously =)

    if( nType == CTRL_TAB_ITEM )
...
        else if( nState & ControlState::SELECTED )
        {
            iState = TILES_SELECTED;
            // increase the selected tab
            rc.left-=2;
 
Not a caching bug - just a pure logic one; allocating a DC of the size requested doesn't have enough space to render the pieces requested (hmm).

Thinking ...
Comment 18 Commit Notification 2016-02-17 23:52:14 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2966d57bdfdd40a55e31408f7da75b415e809d8e

tdf#95618 - opengl - mend control regions and caching for tab headers.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2016-02-18 10:46:42 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ad929ba03551b75e79c88699d44d75dc07669e2&h=libreoffice-5-1

tdf#95618 - opengl - mend control regions and caching for tab headers.

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Michael Meeks 2016-02-18 10:49:36 UTC
Patches pushed to master and queued for -5-1-1 - thanks for filing ! =)
Comment 21 tommy27 2016-02-21 07:47:50 UTC
works fine in  5.2.0.0.alpha0+
Build ID: 05618e74c77658da76f467a1ab328cb310a19e84
CPU Threads: 4; OS Version: Windows 6.29; UI Render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-02-20_23:42:27
Locale: it-IT (it_IT)

VERIFIED

thanks Micheal