tdf#95618 - opengl - mend control regions and caching for tab headers.

Some tab headers in some themes unhelpfully enlarge the control region
in some states - so query the region size in advance. Sadly the
control region querying is something of a train-wreck too - so only
use that for CTRL_TAB_ITEMs for now.

Also fix Rectangle constructor ordering.

Change-Id: I5e66ec541193f5b66a656dd45d5fba67a771e132